--- a/TP4/TP4.vcxproj
+++ b/TP4/TP4.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Produits.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Produits.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
