--- a/TP4/TP4.vcxproj
+++ b/TP4/TP4.vcxproj
@@ -140,9 +140,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Piece.cpp" />
     <ClCompile Include="Produits.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Piece.h" />
     <ClInclude Include="Produits.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
