--- a/TP5/TP5.vcxproj.filters
+++ b/TP5/TP5.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="Administrateur.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
