Début de l'implémentation de la classe Magasin

--- a/TP6/TP6.vcxproj
+++ b/TP6/TP6.vcxproj
@@ -139,10 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Magasin.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Produit.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Magasin.h" />
     <ClInclude Include="Produit.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
