--- a/TP8/TP8.vcxproj
+++ b/TP8/TP8.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="Graphique.h" />
     <ClInclude Include="GraphiqueCompose.h" />
     <ClInclude Include="GraphiqueSimple.h" />
+    <ClInclude Include="Ligne.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Terminal.h" />
   </ItemGroup>
@@ -149,6 +150,7 @@
     <ClCompile Include="Graphique.cpp" />
     <ClCompile Include="GraphiqueCompose.cpp" />
     <ClCompile Include="GraphiqueSimple.cpp" />
+    <ClCompile Include="Ligne.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Terminal.cpp" />
